--- a/index.html
+++ b/index.html
@@ -3,13 +3,48 @@
   <head>
     <meta charset="UTF-8" />
 
+    <!-- HTML Meta Tags -->
+    <title>Enca Scientific</title>
+    <meta
+      name="description"
+      content="Sustainable microencapsulation, one droplet at a time"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://encascientific.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Enca Scientific" />
+    <meta
+      property="og:description"
+      content="Sustainable microencapsulation, one droplet at a time"
+    />
+    <meta
+      property="og:image"
+      content="https://encascientific.com/preview.png"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="encascientific.com" />
+    <meta property="twitter:url" content="https://encascientific.com" />
+    <meta name="twitter:title" content="Enca Scientific" />
+    <meta
+      name="twitter:description"
+      content="Sustainable microencapsulation, one droplet at a time"
+    />
+    <meta
+      name="twitter:image"
+      content="https://encascientific.com/preview.png"
+    />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enca Scientific</title>
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
