--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <script
+      defer
+      data-domain="encascientific.com"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
+
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
