Added SplitBee analytics also

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
       src="https://plausible.io/js/plausible.js"
     ></script>
 
+    <script async src="https://cdn.splitbee.io/sb.js"></script>
+
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
