--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       src="https://plausible.io/js/plausible.js"
     ></script>
 
-    <script async src="https://cdn.splitbee.io/sb.js"></script>
+    <!-- <script async src="https://cdn.splitbee.io/sb.js"></script> -->
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
